--- a/src/html/location.html
+++ b/src/html/location.html
@@ -16,29 +16,6 @@
 <body>
   <div id="toiletmap"></div>
 
-  <script type="text/javascript">
-
-    var map = new BMap.Map("toiletmap");
-    var point = new BMap.Point(119, 37);
-    map.centerAndZoom(point, 15);
-    map.enableScrollWheelZoom(true);
-
-    map.addControl(new BMap.NavigationControl());
-    map.addControl(new BMap.ScaleControl({
-      anchor: BMAP_ANCHOR_TOP_RIGHT,
-      offset: new BMap.Size(10, 10)
-    }));    
-    map.addControl(new BMap.GeolocationControl());    
-
-    var geolocation = new BMap.Geolocation();
-
-    geolocation.getCurrentPosition(function(r){
-      if(this.getStatus() == BMAP_STATUS_SUCCESS){
-        var mk = new BMap.Marker(r.point);
-        map.addOverlay(mk);
-        map.panTo(r.point);
-      }     
-    });
-  </script>
+  <script type="text/javascript" src="./location.js"></script>
 </body>
 </html>
